// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_help returns a list of all commands 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "Here is a list of available commands:",
        "help, 3.5, elixir, event, item, madness, ping, portent, prune, spell, table, treasure, wild magic",
        "Get more details with \\"_help [command]\\"",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "send": [MockFunction] {
          "calls": Array [
            Array [
              Array [
                "Here is a list of available commands:",
                "help, 3.5, elixir, event, item, madness, ping, portent, prune, spell, table, treasure, wild magic",
                "Get more details with \\"_help [command]\\"",
              ],
              Object {
                "split": true,
              },
            ],
          ],
          "results": [Circular],
        },
      },
    },
  ],
}
`;

exports[`_help returns the details for the event command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "**event**: Trigger a random event",
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "send": [MockFunction] {
          "calls": Array [
            Array [
              "**event**: Trigger a random event",
              Object {
                "split": true,
              },
            ],
          ],
          "results": [Circular],
        },
      },
    },
  ],
}
`;

exports[`_help returns the details for the help command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "**help**: Get help with commands
*aliases*: commands, usage
*usage*: \`_help [command]\`",
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "send": [MockFunction] {
          "calls": Array [
            Array [
              "**help**: Get help with commands
*aliases*: commands, usage
*usage*: \`_help [command]\`",
              Object {
                "split": true,
              },
            ],
          ],
          "results": [Circular],
        },
      },
    },
  ],
}
`;

exports[`_help returns the details for the treasure command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "**treasure**: Give me the loot!
*aliases*: loot
*usage*: \`_treasure [hoard] <cr> [d100]\`
*examples*: \`_treasure 4\`, \`_treasure 6 86\`, \`_treasure hoard 10\`",
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "send": [MockFunction] {
          "calls": Array [
            Array [
              "**treasure**: Give me the loot!
*aliases*: loot
*usage*: \`_treasure [hoard] <cr> [d100]\`
*examples*: \`_treasure 4\`, \`_treasure 6 86\`, \`_treasure hoard 10\`",
              Object {
                "split": true,
              },
            ],
          ],
          "results": [Circular],
        },
      },
    },
  ],
}
`;
